plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

bootJar { archiveFileName = 'app.jar' }
jar { enabled = false }

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories { mavenCentral() }


dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'com.mysql:mysql-connector-j:8.4.0'
    runtimeOnly 'com.h2database:h2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation platform("org.testcontainers:testcontainers-bom:1.20.3")
    testImplementation 'org.testcontainers:junit-jupiter:1.20.3'
    testImplementation 'com.redis:testcontainers-redis'
    implementation 'it.ozimov:embedded-redis:0.7.2'

    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'

    implementation 'org.imgscalr:imgscalr-lib:4.2'
    implementation 'com.drewnoakes:metadata-extractor:2.18.0'

    implementation 'org.springframework.boot:spring-boot-starter-webflux'
}
test {
    useJUnitPlatform()
    testLogging {
        events "FAILED"
        exceptionFormat "full"
        showExceptions true
        showCauses true
        showStackTraces true
    }
}
